<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="today" />
    <string name="settings" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_weather">Current Weather</string>
    <string name="Location" />
    <string name="enable_feature">Enable feature</string>
    <string name="temp">Temp</string>
    <string name="sunset">Sunset</string>
    <string name="_18_00">18:00</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="_05_00">05:00</string>
    <string name="humidity" />
    <string name="Wind_Speed" />
    <string name="air_quality">Air Quality</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind">Wind</string>
    <string name="_5_day_forecast">5 Day Forecast</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="updated_at">updated at</string>
    <string name="aqi">AQI</string>
    <string name="status">status</string>
    <string name="feels_like">Feels Like</string>
    <string name="location">Location</string>
    <string name="forecast_status">forecast status</string>
    <string name="temperature">Temperature</string>
    <string name="time">time</string>
    <string name="forecast" />


</resources>