<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/updated_at"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation"/>
        <TextView
            android:id="@+id/cloudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imgTemp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUpdate" />


        <ImageView
            android:id="@+id/imgTemp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cloudy">

        </ImageView>
        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgTemp"
            app:layout_constraintBottom_toTopOf="@id/tvFeelsLike">

        </TextView>
        <TextView
            android:id="@+id/tvFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonForecast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp">

        </TextView>

        <TextView
            android:id="@+id/maxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temp"

            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonForecast"
            app:layout_constraintEnd_toStartOf="@+id/tvFeelsLike"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp" />

        <TextView
            android:id="@+id/minTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_temp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonForecast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvFeelsLike"
            app:layout_constraintTop_toBottomOf="@+id/temp" />

        <Button
            android:id="@+id/buttonForecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="296dp"
            android:alpha="0.5"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/_5_day_forecast"
            android:textColor="#064461"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLy1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="-52dp">

            <LinearLayout
                android:id="@+id/linearLy1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="76dp"
                android:layout_marginBottom="172dp"
                android:orientation="vertical"
                android:padding="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/imgSunrise"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sunrise_forecast_svgrepo_com" />

                <TextView
                    android:id="@+id/Sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/sunrise"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLy2"
                android:layout_width="62dp"
                android:layout_height="64dp"
                android:layout_marginStart="76dp"
                android:layout_marginBottom="52dp"
                android:orientation="vertical"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/imgPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/pressure_meter_svgrepo_com" />

                <TextView
                    android:id="@+id/Pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/pressure"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/tvPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/_18_00"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLy3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginBottom="60dp"
                android:orientation="vertical"
                android:padding="6dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLy4"
                app:layout_constraintEnd_toStartOf="@+id/linearLy5"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintStart_toEndOf="@+id/linearLy1">

                <ImageView
                    android:id="@+id/imgSunset"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sunset_svgrepo_com" />

                <TextView
                    android:id="@+id/Sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLy4"
                android:layout_width="62dp"
                android:layout_height="64dp"
                android:layout_marginBottom="52dp"
                android:orientation="vertical"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLy6"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLy2">

                <ImageView
                    android:id="@+id/imgHumidity"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/humidity_svgrepo_com" />

                <TextView
                    android:id="@+id/Humidity"
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text=" Humidity"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/_18_00"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLy5"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="172dp"
                android:orientation="vertical"
                android:padding="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/imgWindSpeed"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/direction_wind_speed_navigation_svgrepo_com" />

                <TextView
                    android:id="@+id/windSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/wind"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWindSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="13sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLy6"
                android:layout_width="62dp"
                android:layout_height="64dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="52dp"
                android:orientation="vertical"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:id="@+id/imgAirQuality"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/smoke_industrial_polution_pollute_svgrepo_com" />

                <TextView
                    android:id="@+id/airQuality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/aqi"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/tvAirQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="1234"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>




















